--- a/KafkaStudy/pom.xml
+++ b/KafkaStudy/pom.xml
@@ -26,6 +26,13 @@
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.ververica</groupId>
+            <artifactId>flink-connector-mysql-cdc</artifactId>
+            <version>2.2.0</version>
+        </dependency>
     </dependencies>
 
 </project>
